This is SLOG-2 Standard Development Kit 

This version also contains a prototype Jumpshot, and sample implementation
of TRACE-API in trace_sample/

5/6/03 added Join method support in Jumpshot for AIX's UTE converted
       slog2 file, so disconnected bebit states can be connected in
       connected view as 1 state.

5/6/03 added an extra filter in traceTOslog2 and clogTOslog2 to remove
       unused categories

6/9/03 fixed some bugs related to the Join method.

6/9/03 modified slog2print so it is scalable.  It used to be slog2print
       read in the whole logfile recursively, this requires huge amount
       of memory.  The updated slog2print uses a new iterator to read in
       the logfile in a more scalable fashion.

6/9/03 added OverlapRatios PREVIEW_STATE_DISPLAY view and
       removed the DecreLegend view.  Added CumulativeExclusion tag
       but it is not implemented yet.

6/9/03 duplicate the control on PREVIEW_STATE_DISPLAY inside the Timeline
       window.  It is an active control.

6/23/03 replace the name for OverlapRatios by OverlapInclusionRatio, i.e.
        the original ratio stored in Preview state is renamed as InclusionRatio.

6/23/03 added the support of ExclusionRatio in the logfile format reader
        as well all traceTOslog2 convertor.

6/23/03 added the support of statistics collecton defined by the duration.
        The statistics is computed for both InclusionRatio and ExclusiveRatio.
        The statistics will be sent to the stdout for now.
        
6/23/03 updated the popup menu of the legend name in the Legend window.
        The new sort menu should be more intuitive. 