@@ -1,0 +1,27 @@
+#!/bin/sh
+
+# Set JAVA environments
+JVM=@JVM@
+JVMFLAGS=@JVMFLAGS@
+
+# Set PATH to various jar's needed by the GUI
+GUI_LIBDIR=@libbuild_dir@
+GUI_HOME=${GUI_LIBDIR}/..
+MAIN_LIB=${GUI_LIBDIR}/convertor.jar
+
+
+if [ -z "${GUI_LIBDIR}" -o "${GUI_LIBDIR}" = "/lib" ]; then
+    echo "GUI_LIBDIR is NOT set!"
+    exit 1
+else
+    echo "GUI_LIBDIR is set. GUI_LIBDIR = "${GUI_LIBDIR}
+fi
+
+if [ -z "`echo $JVMFLAGS | grep '\-Xms'`" ] ; then
+    JVMFLAGS="-Xms32m $JVMFLAGS"
+fi
+if [ -z "`echo $JVMFLAGS | grep '\-Xmx'`" ] ; then
+    JVMFLAGS="-Xmx64m $JVMFLAGS"
+fi
+
+${JVM} ${JVMFLAGS} -jar @JPATH_START@${MAIN_LIB}@JPATH_FINAL@ "$@"
